# youtube-url-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_parser.py
youtube_url_parser/: __init__.py  parser.py
